@@ -7,10 +7,10 @@
 
 	<title>Blueprint CSS Framework Test Suite</title>
 
-  <!-- Framework CSS -->
+    <!-- Framework CSS -->
 	<link rel="stylesheet" href="../blueprint/compressed/screen.css" type="text/css" media="screen, projection" />
 	<link rel="stylesheet" href="../blueprint/compressed/print.css" type="text/css" media="print" />
-  <!--[if lt IE 7]><link rel="stylesheet" href="../blueprint/lib/ie.css" type="text/css" media="screen, projection"><![endif]-->
+    <!--[if lt IE 7]><link rel="stylesheet" href="../blueprint/lib/ie.css" type="text/css" media="screen, projection"><![endif]-->
 	
 	<!-- Import fancy-type plugin for the sample section. -->
 	<link rel="stylesheet" href="../blueprint/plugins/fancy-type/fancy-type.css" type="text/css" media="screen, projection" />
@@ -138,31 +138,27 @@
     <h5>MISC ELEMENTS</h5>
     
     <div class="column span-8">    
-      <pre>
-      &lt;pre&gt;
-      pre		tab
-      pre		tab
-      pre          space1
-      pre          space1
-      pre                  space2
-      pre                  space2
-      </pre>
+<pre>&lt;pre&gt;
+pre  space1
+pre  space1
+pre    space2
+pre    space2
+pre	tab
+pre	tab</pre>
 
-      <address>
-      &lt;address&gt;<br />
-      Donald Duck<br />
-      Box 555<br />
+      <p><address>
+      &lt;address&gt;<br>
+      Donald Duck<br>
+      Box 555<br>
       Disneyland
-      </address>
+  </address></p>
 
-      <code>
-      &lt;code&gt;
-      Not indented
-        indent1
-        indent1
-          indent2
-            indent3
-      </code>
+<code>&lt;code&gt;
+Not indented
+	indent1
+	indent1
+		indent2
+			indent3</code>
 
       <tt>&lt;tt&gt;
       This tt text should be monospaced
